--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,12 @@
+html {
+    height: 100vh;
+    
+}
+
 body {
     font-family: 'Raleway', sans-serif;
+    height: 100vh;
+    
  }
 
 * {
@@ -11,7 +18,7 @@ body {
     margin: 0 auto;
 }
 
-.clearfix-before, .clearfix-after {
+.clearfix, .clearfix-before {
     content: " ";
     display: table;
 }
@@ -52,34 +59,66 @@ h6 {
 }
 
 p, li {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
     line-height: 1.75;
 }
 
-#main-nav {
-    margin: 2%;
+#header {
     padding: 2.5em 5%;
+    display: flex;
+        -webkit-flex: flex-shrink;
+    flex-flow: row wrap; 
+        -webkit-flex-flow: row wrap;
 }
-.name {
+.header-image {
+    background-image: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/SLZRDLFT96.jpg');
+    background-size: cover;
+    height: 100%;
+}
+
+.logo-container {
+    float: left;
+    
+}
+.logo {
        font-weight: 700;
-        font-size: .7em;
+        font-size: 1.75em;
         letter-spacing: 4px;
         text-transform: uppercase;
         border: 2px solid #e9e9e9;
         padding: .75em 1rem;
         text-decoration: none;
         color: #333333;
-        float: left;
         font-family: 'Montserrat', sans-serif;
+        display: inline-flex;
+        z-index: 1;
     }
 
 nav {
     font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: inherit;
     float: right;
+    display: table;
+    position: relative;
+    left: 50%;
+    top: 5%;
+}
+
+.a-menu {
+    padding: 2%;
+    margin: 0 1rem;
     
 }
 
+a {
+    color: #333333;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+
 a:link {
+    color: #333333;
     text-decoration: none;
 }
 
@@ -88,16 +127,18 @@ a:hover {
     text-decoration: none;
 }
 
-a {
-    color: #333333;
-    text-decoration: none;
-    margin: 0 1rem;
-    font-size: 1rem;
-}
 
 
 .col_1, .col_2, .col_3 {
     float: left;
+    min-height: 100%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-flow: column wrap; 
+        -webkit-flex-flow: column wrap;
+
 }
 
 .col_1 {
@@ -135,15 +176,25 @@ p {
 }
 
 .about {
-    padding: 0 7.5% 0 0;    
+    padding: 20 7.5% 0 0;    
 }
 
 .homepage_content {
    
 }
 
+.post-col {
+    width: 45%;
+    padding: 0 5% 0 2.5%;
+}
+
+.post-container {
+    margin-bottom: 2rem;
+    padding: 2%;
+}
+
 #main_footer {
-    padding: 2.5em 5%;
+    padding: 2.5em 2%;
     border-top: 1px solid #e9e9e9;
 }
 
@@ -161,3 +212,36 @@ i {
     margin-left: 1em;
     padding-top: .2em;
 }
+
+.big-statement {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    text-align: center;
+    vertical-align: middle;
+    color: white;
+    font-size: 3em;
+    
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .header_image, .img-header {
+      width: 60%;
+  }
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) {}
