--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,4 +15,4 @@
         <%= link_to "Delete", project_path(@project), method: :delete, data: {confirm: "Are you sure you want to delete this project?"} %>
     </div>
 </div>
-         <% end %>
+        <% render 'footer' %>
