--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
     <a href="https://portfolio-liali-dc.c9users.io/posts" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
+        <a href="https://mysite-liali-dc.c9users.io/projects/" class="a-menu">Projects</a>
+        <a href="https://mysite-liali-dc.c9users.io/posts" class="a-menu">Blog</a>
         <a href="" class="a-menu">Contact</a>
     </nav>
     <div class="big-statement">
