--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <nav>
         <a href="https://mysite-liali-dc.c9users.io/projects/" class="a-menu">Projects</a>
         <a href="https://mysite-liali-dc.c9users.io/posts" class="a-menu">Blog</a>
-        <a href="" class="a-menu">Contact</a>
+        <a href="https://mysite-liali-dc.c9users.io/contacts" class="a-menu">Contact</a>
     </nav>
     <div class="big-statement">
         <h1 style="color: white;">Hello, I'm a developer.</h1>
