--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <body>
 <header id="header" class="clearfix header-image"> 
 <div class="logo-container">
-    <a href="https://portfolio-liali-dc.c9users.io/posts" class="logo">Sharlia Lee</a> 
+    <a href="https://about-lia.herokuapp.com/" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
         <a href="https://mysite-liali-dc.c9users.io/projects/" class="a-menu">Projects</a>
