--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,7 @@
 <div class="wrapper wrapper_padding clearfix clearfix-before clearfix-after">
     <div class="col_2 project_content">
+        <h1>Projects</h1>
+        <br>
         <% @projects.each do |project| %>
 		    <div class="post">
 			    <p class="date"><%= project.created_at.strftime('%A, %B %d') %></p>
