finally fixed contact page

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,4 @@
-<section id="form-main">
+<section id="form-main" class="clearfix-after clearfix wrapper wrapper_padding">
   <div class="form-div">
     <form class="form" id="form1">
       
@@ -23,4 +23,14 @@
   </div>
 </section>
   
-
+<footer id="main_footer" class="clearfix-after clearfix wrapper wrapper_padding">
+    <p class="copyright">&copy;2016 Sharlia Lee - Junior Front End Developer</p>
+    <div class="footer_nav">
+        <a href="https://github.com/lee-sharlia"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="https://jsfiddle.net/user/liali_dc/fiddles/"><i class="fa fa-jsfiddle" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/liali_dc"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/sharlia-l-81a0a5a6"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a href="http://codepen.io/Liali_dc/#"><i class="fa fa-codepen" aria-hidden="true"></i>
+</a>
+    </div>
+</footer>
