--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -284,6 +284,7 @@ i {
 
 #form-main {
 	width:100%;
+	height: 100%;
 	float:left;
 	padding-top:0px;
 }
@@ -298,10 +299,10 @@ i {
 	float: left;
 	left: 50%;
 	position: absolute;
-  margin-top:30px;
+    margin-top:30px;
 	margin-left: -260px;
-  -moz-border-radius: 7px;
-  -webkit-border-radius: 7px;
+      -moz-border-radius: 7px;
+      -webkit-border-radius: 7px;
 }
 
 .feedback-input {
