--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,10 +2,11 @@
     <div class="col_1 about homepage_content">
         <h2><strong>About</strong></h2>
         <hr>
-        <p>Front End Developer to be exact...I've built my career building useful websites for small businesses. I'm passionate about guiding new businesses through the process of identifying, deploying, and measuring the best marketing strategy for their business.</p>
-        <p>You have to wear many hats as a founder- so everything tends to look pretty scrappy at times. Having been there myself, I offer a unique focused perspective on growing startup businesses. I assist with prioritizing workflows, marketing, content creation, building your startup’s website and blog. </p>
+        <p>I'm passionate about collaboration, discovery, and strategic thinking. I've built my career building useful websites for small businesses; helping each company to identify, communicate, and measure its digital brand and impact</p>
+        <p>I transitioned into Front End Development because I discovered that I did want to build just pretty websites, rather I felt more satisfied about building applications and useful tools which serve groups of users. Being a fan of agile/scrum development, I’ve assisted with prioritizing workflows, content creation, test builds and deploying. </p>
+
     </div>
-    <div class="col_2 homepage_content">
+    <!--<div class="col_2 homepage_content">
         <h2>Sites I've Designed</h2>
         <hr>
         <h4>Petsitting Site</h4>
@@ -28,7 +29,7 @@
         <p class="date">February 2016</p>
         <h4>To-do List</h4>
         <p class="date">June 2016</p>
-    </div>
+    </div> -->
 </div> 
 <footer id="main_footer">
     <p class="copyright">&copy;2016 Sharlia Lee - Front End Developer</p>
