fixed routing issue

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
         <h2><strong>About</strong></h2>
         <hr>
         <p>I'm passionate about collaboration, discovery, and strategic thinking. I've built my career building useful websites for small businesses; helping each company to identify, communicate, and measure its digital brand and impact</p>
-        <p>I transitioned into Front End Development because I discovered that I did want to build just pretty websites, rather I felt more satisfied about building applications and useful tools which serve groups of users. Being a fan of agile/scrum development, I’ve assisted with prioritizing workflows, content creation, test builds and deploying. </p>
+        <p>I transitioned into Front End Development because I realized that I didn't want to build just pretty websites, rather I felt more satisfied about building applications and useful tools which serve groups of users. Being a fan of agile/scrum development, I’ve assisted with prioritizing workflows, content creation, test builds and deploying. </p>
 
     </div>
     <!--<div class="col_2 homepage_content">
