another edit to index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
     <a href="https://about-lia.herokuapp.com/" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
-        <a href="https://mysite-liali-dc.c9users.io/projects/" class="a-menu">Projects</a>
-        <a href="https://mysite-liali-dc.c9users.io/posts" class="a-menu">Blog</a>
-        <a href="https://mysite-liali-dc.c9users.io/contacts" class="a-menu">Contact</a>
+        <a href="http://about-lia.herokuapp.com/projects/" class="a-menu">Projects</a>
+        <a href="http://about-lia.herokuapp.com/posts" class="a-menu">Blog</a>
+        <a href="http://about-lia.herokuapp.com/contacts" class="a-menu">Contact</a>
     </nav>
     <div class="big-statement">
         <h1 style="color: white;">Hello, I'm a developer.</h1>
