--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <a href="https://about-lia.herokuapp.com/" class="logo">Sharlia Lee</a> 
    </div>
     <nav>
-        <a href="http://about-lia.herokuapp.com/projects/" class="a-menu">Projects</a>
+        <a href="http://about-lia.herokuapp.com/project/" class="a-menu">Projects</a>
         <a href="http://about-lia.herokuapp.com/posts" class="a-menu">Blog</a>
         <a href="http://about-lia.herokuapp.com/contacts" class="a-menu">Contact</a>
     </nav>
