--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
         <p class="date">January 2016</p>
         <a href="https://jsfiddle.net/liali_dc/b02gr0Ly/39/"><h4>Guessing Game</h4></a>
         <p class="date">February 2016</p>
-        <h4>Sliding Menu</h4>
+        <a href="http://codepen.io/Liali_dc/pen/grqNOG"><h4>Sliding Menu</h4></a>
         <p class="date">February 2016</p>
         <h4>To-do List</h4>
         <p class="date">June 2016</p>
